Axes mapping: add FloatText field for x_min, x_max, y_min, y_max; add log-scale checkboxes

--- a/src/scanplot/development_notebooks/axes_mapping.ipynb
+++ b/src/scanplot/development_notebooks/axes_mapping.ipynb
@@ -8,12 +8,12 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import cv2 as cv\n",
     "\n",
-    "from ipywidgets import interact, widgets, fixed\n",
     "import ipywidgets\n",
     "\n",
-    "from matplotlib.patches import Rectangle"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from ipywidgets import interactive, interact, HBox, Layout,VBox, widgets, fixed"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PLOT_NUMBER = 59\n",
+    "PLOT_NUMBER = 6\n",
     "\n",
     "PLOT_PATH = DATA_PATH / \"plot_images\" / f\"plot{PLOT_NUMBER}.png\""
    ]
@@ -68,6 +68,215 @@
     "image = read_image_rgb(PLOT_PATH)\n",
     "\n",
     "h_image, w_image = image.shape[0], image.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Axes mapping working example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_range_slider = ipywidgets.IntRangeSlider(\n",
+    "    value=[0, h_image],\n",
+    "    min=0,\n",
+    "    max=h_image,\n",
+    "    step=2,\n",
+    "    description='Y_min, Y_max:',\n",
+    "    disabled=False,\n",
+    "    continuous_update=True,\n",
+    "    orientation='vertical',\n",
+    "    readout=True,\n",
+    "    readout_format='d',\n",
+    "    layout=ipywidgets.Layout(height=\"300px\", object_position='center'),\n",
+    "    style={\"description_width\": \"initial\"},\n",
+    ")\n",
+    "\n",
+    "x_range_slider = ipywidgets.IntRangeSlider(\n",
+    "    value=[0, w_image],\n",
+    "    min=0,\n",
+    "    max=w_image,\n",
+    "    step=2,\n",
+    "    description='X_min, X_max:',\n",
+    "    disabled=False,\n",
+    "    continuous_update=True,\n",
+    "    orientation='horizontal',\n",
+    "    readout=True,\n",
+    "    readout_format='d',\n",
+    "    layout=ipywidgets.Layout(width=\"500px\"),\n",
+    "    style={\"description_width\": \"initial\"},\n",
+    ")\n",
+    "\n",
+    "x_min_widget = ipywidgets.FloatText(\n",
+    "    value=0,\n",
+    "    description='X_min:',\n",
+    "    step=0.01,\n",
+    "    disabled=False,\n",
+    "    layout=ipywidgets.Layout(width=\"150px\"),\n",
+    ")\n",
+    "y_min_widget = ipywidgets.FloatText(\n",
+    "    value=0,\n",
+    "    description='Y_min:',\n",
+    "    step=0.01,\n",
+    "    disabled=False,\n",
+    "    layout=ipywidgets.Layout(width=\"150px\"),\n",
+    ")\n",
+    "x_max_widget = ipywidgets.FloatText(\n",
+    "    value=0,\n",
+    "    description='X_max:',\n",
+    "    step=0.01,\n",
+    "    disabled=False,\n",
+    "    layout=ipywidgets.Layout(width=\"150px\"),\n",
+    ")\n",
+    "y_max_widget = ipywidgets.FloatText(\n",
+    "    value=0,\n",
+    "    description='Y_max:',\n",
+    "    step=0.01,\n",
+    "    disabled=False,\n",
+    "    layout=ipywidgets.Layout(width=\"150px\"),\n",
+    ")\n",
+    "log_scale_checkbox_x_axis = widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='X axis is log-scale',\n",
+    "    disabled=False,\n",
+    "    indent=True\n",
+    ")\n",
+    "log_scale_checkbox_y_axis = widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='Y axis is log-scale',\n",
+    "    disabled=False,\n",
+    "    indent=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_scale_checkbox_y_axis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_min_widget.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# good source: https://stackoverflow.com/questions/52980565/arranging-widgets-in-ipywidgets-interactive\n",
+    "\n",
+    "def plot_function(y_pos, x_pos):\n",
+    "    # time = np.arange(0, 1, 0.01)\n",
+    "    # df = pd.DataFrame({\"Y1\": np.sin(time*u*2*np.pi)})\n",
+    "    # df.plot()\n",
+    "    plt.figure(figsize=(10, 10))\n",
+    "    draw_image(image)\n",
+    "    line_color = \"red\"\n",
+    "    y_pos = h_image - np.array(y_pos)\n",
+    "    plt.hlines(y=y_pos, xmin=0, xmax=w_image, linestyles='--', color=line_color, alpha=0.3)\n",
+    "    plt.vlines(x=x_pos, ymin=0, ymax=h_image, linestyles='--', color=line_color, alpha=0.3)\n",
+    "\n",
+    "    x_min, x_max = x_pos\n",
+    "    y_min, y_max = y_pos\n",
+    "    plt.scatter([x_min, x_min, x_max], [y_min, y_max, y_min], marker=\"x\", color=\"green\")\n",
+    "\n",
+    "    plt.xticks([])\n",
+    "    plt.yticks([])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "widget = interactive(plot_function, y_pos=y_range_slider, x_pos=x_range_slider)\n",
+    "vertical_slider = widget.children[0]\n",
+    "horizontal_slider = widget.children[1]\n",
+    "output = widget.children[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "widget.children"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "box1 = HBox(\n",
+    "    [vertical_slider, output],\n",
+    "    layout=ipywidgets.Layout(align_items='center')\n",
+    ")\n",
+    "box2 = VBox(\n",
+    "    [horizontal_slider, box1],\n",
+    "    layout=ipywidgets.Layout(align_items='center')\n",
+    ")\n",
+    "\n",
+    "box3 = VBox(\n",
+    "    [x_min_widget, x_max_widget, y_min_widget, y_max_widget, log_scale_checkbox_x_axis, log_scale_checkbox_y_axis]\n",
+    ")\n",
+    "box4 = HBox([box2, box3])\n",
+    "\n",
+    "display(box4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_min_widget.value, x_max_widget.value, y_min_widget.value, y_max_widget.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_scale_checkbox.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experiments"
    ]
   },
   {
@@ -515,131 +724,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Good example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from ipywidgets import interactive,interact, HBox, Layout,VBox\n"
+    "from ipywidgets import interactive,interact, HBox, Layout,VBox"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_function(u=1,v=2,w=3,x=4,y=5,z=6):\n",
-    "    time = np.arange(0,1,0.01)\n",
-    "    df = pd.DataFrame({\"Y1\":np.sin(time*u*2*np.pi),\"y2\":np.sin(time*v*2*np.pi),\"y3\":np.sin(time*w*2*np.pi),\n",
-    "                    \"y4\":np.sin(time*x*2*np.pi),\"y5\":np.sin(time*y*2*np.pi),\"y6\":np.sin(time*z*2*np.pi)})\n",
-    "    df.plot()\n",
-    "\n",
-    "widget = interactive(plot_function, u=1, v=2, w=3, x=4, y=5, z=6)\n",
-    "controls = HBox(widget.children[:-1], layout=Layout(flex_flow='row wrap'))\n",
-    "output = widget.children[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_range_slider = ipywidgets.IntSlider(\n",
-    "    value=1,\n",
-    "    min=0,\n",
-    "    max=h_image,\n",
-    "    step=1,\n",
-    "    description='Test:',\n",
-    "    disabled=False,\n",
-    "    continuous_update=True,\n",
-    "    orientation='vertical',\n",
-    "    readout=True,\n",
-    "    readout_format='d',\n",
-    "    layout=ipywidgets.Layout(height=\"300px\"),\n",
-    ")\n",
-    "\n",
-    "x_range_slider = ipywidgets.IntSlider(\n",
-    "    value=1,\n",
-    "    min=0,\n",
-    "    max=h_image,\n",
-    "    step=1,\n",
-    "    description='Test:',\n",
-    "    disabled=False,\n",
-    "    continuous_update=True,\n",
-    "    orientation='horizontal',\n",
-    "    readout=True,\n",
-    "    readout_format='d',\n",
-    "    layout=ipywidgets.Layout(width=\"500px\"),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# good source: https://stackoverflow.com/questions/52980565/arranging-widgets-in-ipywidgets-interactive\n",
-    "\n",
-    "def plot_function(u=1, v=1):\n",
-    "    # time = np.arange(0, 1, 0.01)\n",
-    "    # df = pd.DataFrame({\"Y1\": np.sin(time*u*2*np.pi)})\n",
-    "    # df.plot()\n",
-    "    draw_image(image)\n",
-    "    line_color = \"red\"\n",
-    "    plt.hlines(y=u, xmin=0, xmax=w_image, linestyles='--', color=line_color)\n",
-    "    plt.hlines(y=100, xmin=0, xmax=w_image, linestyles='--', color=line_color)\n",
-    "    plt.vlines(x=v, ymin=0, ymax=h_image, linestyles='--', color=line_color)\n",
-    "    plt.xticks([])\n",
-    "    plt.yticks([])\n",
-    "\n",
-    "widget = interactive(plot_function, u=y_range_slider, v=x_range_slider)\n",
-    "v_slider = widget.children[0]\n",
-    "h_slider = widget.children[1]\n",
-    "# controls = HBox(widget.children[:-1], layout=Layout(flex_flow='row wrap'), orientation='vertical')\n",
-    "output = widget.children[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# display(VBox([controls, output]))\n",
-    "# display(HBox([v_slider, output]))\n",
-    "box1 = HBox([v_slider, output])\n",
-    "display(VBox([h_slider, box1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
