move main.ipynb to examples/

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -44,7 +44,8 @@
     "import sys\n",
     "import pathlib\n",
     "\n",
-    "SRC_DIR = str(pathlib.Path(__name__).resolve().parent.parent)\n",
+    "REPO_DIR = pathlib.Path(__name__).resolve().parent.parent\n",
+    "SRC_DIR = str(REPO_DIR / \"src\")\n",
     "sys.path.append(SRC_DIR)"
    ]
   },
@@ -69,7 +70,7 @@
     "    draw_points_on_canvas,\n",
     "    draw_points_on_image,\n",
     ")\n",
-    "from scanplot.utils.widgets import init_points_num_slider, init_points_density_slider"
+    "from scanplot.view.parameters_widget import init_points_num_slider, init_points_density_slider"
    ]
   },
   {
@@ -121,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = pathlib.Path(\"../../sample_data/\")"
+    "DATA_PATH = pathlib.Path(\"../datasets/\")"
    ]
   },
   {
@@ -428,6 +429,13 @@
     "y = points[:, 1]\n",
     "plt.scatter(x, y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
