--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Input data examples can be found in `<REPOSITORY>/sample_data/`."
+    "Input data examples can be found in `<REPOSITORY>/datasets/`."
    ]
   },
   {
@@ -320,65 +320,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def detect_points_on_map(\n",
-    "    points_num: float,\n",
-    "    points_density: float,\n",
-    "    correlation_map: np.ndarray,\n",
-    "    draw_detections: bool = True,\n",
-    "    return_result: bool = False,\n",
-    "    figure_size: int = 10,\n",
-    "    marker_size: int = 60,\n",
-    "    marker_color: str = \"yellow\",\n",
-    ") -> np.ndarray | None:\n",
-    "\n",
-    "    ## transform parameters\n",
-    "    corr_map_treshold = linear_parameter_transform(points_num, a=-0.01, b=1)\n",
-    "    iou_treshold = linear_parameter_transform(points_density, a=-0.01, b=1)\n",
-    "\n",
-    "    ## get max points\n",
-    "    max_points, _ = get_corr_map_maximums(\n",
-    "        correlation_map=correlation_map, treshold=corr_map_treshold\n",
-    "    )\n",
-    "\n",
-    "    ## NMS\n",
-    "    actual_points = apply_nms(\n",
-    "        points=max_points,\n",
-    "        correlation_map=correlation_map,\n",
-    "        iou_treshold=iou_treshold,\n",
-    "        bbox_width=w_template,  # TODO: this is global variable, pass as paramrter\n",
-    "        bbox_height=h_template,  # TODO: this is global variable, pass as paramrter\n",
-    "    )\n",
-    "    x_nms = actual_points[:, 0]\n",
-    "    y_nms = actual_points[:, 1]\n",
-    "    number_of_points = len(actual_points)\n",
-    "\n",
-    "    ## draw founded points on original image\n",
-    "    if draw_detections:\n",
-    "        plt.figure(figsize=(figure_size, figure_size))\n",
-    "        draw_image(source_image)  # TODO: this is global variable, pass as paramrter\n",
-    "        plt.scatter(\n",
-    "            x_nms,\n",
-    "            y_nms,\n",
-    "            s=marker_size,\n",
-    "            c=marker_color,\n",
-    "            marker=\"*\",\n",
-    "            edgecolors=\"black\",\n",
-    "            linewidths=0.2,\n",
-    "        )\n",
-    "        plt.xticks([])\n",
-    "        plt.yticks([])\n",
-    "        plt.title(f\"Number of Points: {number_of_points}\")\n",
-    "        plt.show()\n",
-    "\n",
-    "    if return_result:\n",
-    "        return actual_points"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Interactive parameters search with ipywidgets"
+    "from scanplot.view.detector_widget import DetectorWidget\n",
+    "from scanplot.core.detector import detect_points_on_correlation_map"
    ]
   },
   {
@@ -387,24 +330,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# parameters for drawing detections (may be customized)\n",
-    "figure_size = 12\n",
-    "marker_size = 200\n",
+    "detector = DetectorWidget(\n",
+    "    source_image=source_image,\n",
+    "    template=template,\n",
+    "    correlation_map=convolution_map_with_hough\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_size = 10\n",
+    "marker_size = 60\n",
     "marker_color = \"yellow\"\n",
+    "marker_type = \"*\"\n",
     "\n",
     "\n",
-    "interact(\n",
-    "    detect_points_on_map,\n",
-    "    points_num=init_points_num_slider(),\n",
-    "    points_density=init_points_density_slider(),\n",
-    "    correlation_map=fixed(convolution_map_with_hough),\n",
-    "    draw_detections=fixed(True),\n",
-    "    return_result=fixed(False),\n",
-    "    figure_size=fixed(figure_size),\n",
-    "    marker_size=fixed(marker_size),\n",
-    "    marker_color=fixed(marker_color),\n",
-    "    continuous_update=True,\n",
-    ");"
+    "detector.main_widget(fig_size, marker_size, marker_color, marker_type)"
    ]
   },
   {
@@ -413,15 +358,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimal_points_num = 56\n",
-    "optimal_points_density = 50\n",
+    "optimal_points_num = detector.points_num_slider.value\n",
+    "optimal_points_density = detector.points_density_slider.value\n",
     "\n",
-    "points = detect_points_on_map(\n",
+    "points = detect_points_on_correlation_map(\n",
     "    points_num=optimal_points_num,\n",
     "    points_density=optimal_points_density,\n",
     "    correlation_map=convolution_map_with_hough,\n",
-    "    draw_detections=False,\n",
-    "    return_result=True,\n",
+    "    image=source_image,\n",
+    "    template=template,\n",
     ")\n",
     "\n",
     "# points coordinates in pixels (!)\n",
@@ -436,18 +381,11 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "scanplot-hacNhlbC-py3.11",
    "language": "python",
    "name": "python3"
   },
