add get_detections method to DetectorWidget

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -150,10 +150,7 @@
     "source_template = read_image_rgb(TEMPLATE_PATH)\n",
     "\n",
     "image = replace_black_pixels(source_image)\n",
-    "template = replace_black_pixels(source_template)\n",
-    "\n",
-    "h_image, w_image = image.shape[0], image.shape[1]\n",
-    "h_template, w_template = template.shape[0], template.shape[1]"
+    "template = replace_black_pixels(source_template)"
    ]
   },
   {
@@ -358,20 +355,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimal_points_num = detector.points_num_slider.value\n",
-    "optimal_points_density = detector.points_density_slider.value\n",
-    "\n",
-    "points = detect_points_on_correlation_map(\n",
-    "    points_num=optimal_points_num,\n",
-    "    points_density=optimal_points_density,\n",
-    "    correlation_map=convolution_map_with_hough,\n",
-    "    image=source_image,\n",
-    "    template=template,\n",
-    ")\n",
+    "detected_points_px = detector.get_detections()\n",
     "\n",
     "# points coordinates in pixels (!)\n",
-    "x = points[:, 0]\n",
-    "y = points[:, 1]\n",
+    "x = detected_points_px[:, 0]\n",
+    "y = detected_points_px[:, 1]\n",
     "plt.scatter(x, y)"
    ]
   },
