--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -317,8 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scanplot.view.detector_widget import DetectorWidget\n",
-    "from scanplot.core.detector import detect_points_on_correlation_map"
+    "from scanplot.view.detector_widget import DetectorWidget"
    ]
   },
   {
