--- a/examples/pipeline.ipynb
+++ b/examples/pipeline.ipynb
@@ -109,8 +109,8 @@
     "\n",
     "from scanplot.core.preprocess import replace_black_pixels\n",
     "\n",
-    "from scanplot.core.conv_map_operations import (\n",
-    "    invert_convolution_map,\n",
+    "from scanplot.core.corr_map_operations import (\n",
+    "    invert_correlation_map,\n",
     "    normalize_map,\n",
     "    get_first_N_maximums,\n",
     "    remove_nan_inf,\n",
