--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "from scanplot.core.template_match import template_match\n",
     "from scanplot.core.preprocess import replace_black_pixels\n",
-    "from scanplot.core.conv_map_operations import normalize_map\n",
+    "from scanplot.core.corr_map_operations import normalize_map\n",
     "from scanplot.core.process_template import (\n",
     "    template_tresholding,\n",
     "    crop_image,\n",
