prettify main.ipynb

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -22,9 +22,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import cv2 as cv\n",
     "\n",
-    "from ipywidgets import interact, widgets, fixed\n",
     "from plotly.express import imshow as imshow_interactive"
    ]
   },
@@ -32,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import core modules"
+    "## Import app modules"
    ]
   },
   {
@@ -65,12 +63,7 @@
    "outputs": [],
    "source": [
     "from scanplot.utils.read_image import read_image_rgb\n",
-    "from scanplot.utils.drawing import (\n",
-    "    draw_image,\n",
-    "    draw_points_on_canvas,\n",
-    "    draw_points_on_image,\n",
-    ")\n",
-    "from scanplot.view.parameters_widget import init_points_num_slider, init_points_density_slider"
+    "from scanplot.utils.drawing import draw_image"
    ]
   },
   {
@@ -83,16 +76,20 @@
     "from scanplot.core.preprocess import replace_black_pixels\n",
     "from scanplot.core.corr_map_operations import normalize_map\n",
     "from scanplot.core.process_template import (\n",
-    "    template_tresholding,\n",
-    "    crop_image,\n",
-    "    reconstruct_template_mask,\n",
+    "    template_tresholding, reconstruct_template_mask\n",
     ")\n",
     "from scanplot.core.hough_transform import generalized_hough_transform\n",
-    "from scanplot.core.parameters_search import (\n",
-    "    linear_parameter_transform,\n",
-    "    get_corr_map_maximums,\n",
-    ")\n",
-    "from scanplot.core.nms import apply_nms"
+    "from scanplot.core.coords_converter import CoordinatesConverter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scanplot.view.detector_widget import DetectorWidget\n",
+    "from scanplot.view.coords_mapper import CoordinatesMapper"
    ]
   },
   {
@@ -187,7 +184,7 @@
    "source": [
     "TRESHOLD_VALUE = 190\n",
     "template_mask = template_tresholding(template, TRESHOLD_VALUE)\n",
-    "new_template_mask = reconstruct_template_mask(template_mask)\n",
+    "additional_template_mask = reconstruct_template_mask(template_mask)\n",
     "\n",
     "# fig = plt.figure()\n",
     "# plt.subplot(1, 2, 1)\n",
@@ -195,7 +192,7 @@
     "# plt.xticks([]); plt.yticks([])\n",
     "\n",
     "# plt.subplot(1, 2, 2)\n",
-    "# draw_image(new_template_mask)\n",
+    "# draw_image(additional_template_mask)\n",
     "# plt.xticks([]); plt.yticks([]);"
    ]
   },
@@ -219,10 +216,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "method = \"cv.TM_SQDIFF_NORMED\"\n",
-    "\n",
-    "convolution_map, _ = template_match(image, template, template_mask, method)\n",
-    "convolution_map2, _ = template_match(image, template, new_template_mask, method)"
+    "correlation_map, _ = template_match(\n",
+    "    image, template, template_mask, norm_result=True\n",
+    ")\n",
+    "correlation_map_additional, _ = template_match(\n",
+    "    image, template, additional_template_mask, norm_result=True\n",
+    ")"
    ]
   },
   {
@@ -242,14 +241,14 @@
     "    image, template, norm_result=True, crop_result=True\n",
     ")\n",
     "\n",
-    "assert convolution_map.shape == accumulator.shape"
+    "assert correlation_map.shape == accumulator.shape"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Combine convolution maps"
+    "## Combine correlation maps"
    ]
   },
   {
@@ -265,14 +264,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "convolution_map = normalize_map(convolution_map)\n",
-    "convolution_map2 = normalize_map(convolution_map2)\n",
+    "# correlation_map_combined = correlation_map + 0.7 * correlation_map_additional\n",
+    "# correlation_map_combined = normalize_map(correlation_map_combined)\n",
     "\n",
-    "convolution_map_combined = convolution_map + 0.7 * convolution_map2\n",
-    "convolution_map_combined = normalize_map(convolution_map_combined)\n",
-    "\n",
-    "convolution_map_with_hough = convolution_map + 0.6 * accumulator\n",
-    "convolution_map_with_hough = normalize_map(convolution_map_with_hough)"
+    "correlation_map_with_hough = correlation_map + 0.6 * accumulator\n",
+    "correlation_map_with_hough = normalize_map(correlation_map_with_hough)"
    ]
   },
   {
@@ -281,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imshow_interactive(convolution_map_with_hough)"
+    "# imshow_interactive(correlation_map_with_hough)"
    ]
   },
   {
@@ -317,19 +313,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scanplot.view.detector_widget import DetectorWidget"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "detector = DetectorWidget(\n",
     "    source_image=source_image,\n",
     "    template=template,\n",
-    "    correlation_map=convolution_map_with_hough\n",
+    "    correlation_map=correlation_map_with_hough\n",
     ")"
    ]
   },
@@ -360,6 +347,83 @@
     "x = detected_points_px[:, 0]\n",
     "y = detected_points_px[:, 1]\n",
     "plt.scatter(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Convert coordinates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Map pixel coordinates to factual coordinates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapper = CoordinatesMapper(source_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapper.interactive_widget()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert pixel coordinates to factual coordinates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "converter = CoordinatesConverter()\n",
+    "converter.import_parameters_from_mapper(mapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_px = detected_points_px[:, 0]\n",
+    "y_px = detected_points_px[:, 1]\n",
+    "\n",
+    "x_factual, y_factual = converter.from_pixel(x_pixel=x_px, y_pixel=y_px)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(x_factual, y_factual)"
    ]
   },
   {
