--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "from scanplot.view.detector_widget import DetectorWidget\n",
-    "from scanplot.view.coords_mapper import CoordinatesMapper"
+    "from scanplot.view.coords_mapper_widget import CoordinatesMapper"
    ]
   },
   {
