--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -17,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -62,8 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scanplot.utils.read_image import read_image_rgb\n",
-    "from scanplot.utils.drawing import draw_image"
+    "from scanplot.io.read_image import read_image_rgb\n",
+    "from scanplot.plotting import draw_image"
    ]
   },
   {
