--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -65,6 +65,7 @@
    "outputs": [],
    "source": [
     "from scanplot.io.read_image import read_image_rgb\n",
+    "from scanplot.io.saving import dump_coords_csv\n",
     "from scanplot.plotting import draw_image"
    ]
   },
@@ -426,6 +427,19 @@
    "outputs": [],
    "source": [
     "plt.scatter(x_factual, y_factual)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dump_coords_csv(\n",
+    "#     x=x_factual,\n",
+    "#     y=y_factual,\n",
+    "#     savepath=\"tmp.csv\"\n",
+    "# )"
    ]
   },
   {
