add __init__ for view imports

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -82,8 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scanplot.view.detector_widget import DetectorWidget\n",
-    "from scanplot.view.coords_mapper_widget import CoordinatesMapper"
+    "from scanplot.view import CoordinatesMapper, DetectorWidget"
    ]
   },
   {
@@ -432,6 +431,13 @@
     "#     savepath=\"tmp.csv\"\n",
     "# )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
