rename template_tresholding func

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -70,7 +70,7 @@
     "from scanplot.core.preprocess import replace_black_pixels\n",
     "from scanplot.core.corr_map_operations import normalize_map\n",
     "from scanplot.core.process_template import (\n",
-    "    template_tresholding, reconstruct_template_mask\n",
+    "    image_tresholding, reconstruct_template_mask\n",
     ")\n",
     "from scanplot.core.hough_transform import generalized_hough_transform\n",
     "from scanplot.core.coords_converter import CoordinatesConverter"
@@ -176,7 +176,7 @@
    "outputs": [],
    "source": [
     "TRESHOLD_VALUE = 190\n",
-    "template_mask = template_tresholding(template, TRESHOLD_VALUE)\n",
+    "template_mask = image_tresholding(template, TRESHOLD_VALUE)\n",
     "additional_template_mask = reconstruct_template_mask(template_mask)\n",
     "\n",
     "# fig = plt.figure()\n",
