--- a/examples/pipeline.ipynb
+++ b/examples/pipeline.ipynb
@@ -70,15 +70,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scanplot.setup_logger import logger"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from scanplot.utils.read_image import read_image_rgb, read_image_gray\n",
     "from scanplot.utils.drawing import (\n",
     "    draw_image,\n",
@@ -118,7 +109,7 @@
     "\n",
     "\n",
     "from scanplot.core.process_template import (\n",
-    "    template_tresholding,\n",
+    "    image_tresholding,\n",
     "    extract_largest_component,\n",
     "    find_bbox,\n",
     "    crop_image,\n",
@@ -282,7 +273,7 @@
    "outputs": [],
    "source": [
     "TRESHOLD_VALUE = 190\n",
-    "template_mask = template_tresholding(template, TRESHOLD_VALUE)\n",
+    "template_mask = image_tresholding(template, TRESHOLD_VALUE)\n",
     "new_template_mask = reconstruct_template_mask(template_mask)\n",
     "\n",
     "fig = plt.figure()\n",
