use Mean tresholding as default tresholding method

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -175,8 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRESHOLD_VALUE = 190\n",
-    "template_mask = image_tresholding(template, TRESHOLD_VALUE)\n",
+    "template_mask = image_tresholding(template)\n",
     "additional_template_mask = reconstruct_template_mask(template_mask)\n",
     "\n",
     "# fig = plt.figure()\n",
