--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -285,18 +285,9 @@
    "source": [
     "The algorithm has 2 parameters:\n",
     "- Points Number\n",
-    "- Points Density\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The impact of these parameters on the final result is shown in the images below:\n",
+    "- Points Density\n",
     "\n",
-    "![](../../docs/images/parameter_search_1.png)\n",
-    "\n",
-    "![](../../docs/images/parameter_search_2.png)"
+    "Learn more about parameters selection in [documentation](https://github.com/adusachev/scanplot/blob/develop/docs/user_manual.md#algorithm-parameters)."
    ]
   },
   {
