--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -55,8 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scanplot.io.read_image import read_image_rgb\n",
-    "from scanplot.io.saving import dump_coords_csv\n",
+    "from scanplot.io import read_image_rgb\n",
+    "from scanplot.io import dump_coords_csv\n",
     "from scanplot.plotting import draw_image"
    ]
   },
