fix core modules imports

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -66,14 +66,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scanplot.core.template_match import template_match\n",
-    "from scanplot.core.preprocess import replace_black_pixels\n",
-    "from scanplot.core.corr_map_operations import normalize_map\n",
-    "from scanplot.core.process_template import (\n",
-    "    image_tresholding, reconstruct_template_mask\n",
-    ")\n",
-    "from scanplot.core.hough_transform import generalized_hough_transform\n",
-    "from scanplot.core.coords_converter import CoordinatesConverter"
+    "from scanplot.core import template_match\n",
+    "from scanplot.core import replace_black_pixels\n",
+    "from scanplot.core import normalize_map\n",
+    "from scanplot.core import image_tresholding, reconstruct_template_mask\n",
+    "from scanplot.core import generalized_hough_transform\n",
+    "from scanplot.core import CoordinatesConverter"
    ]
   },
   {
@@ -121,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PLOT_NUMBER = 59\n",
+    "PLOT_NUMBER = 84\n",
     "MARKER_NUMBER = 1\n",
     "\n",
     "PLOT_PATH = DATA_PATH / \"plot_images\" / f\"plot{PLOT_NUMBER}.png\"\n",
@@ -264,15 +262,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# imshow_interactive(correlation_map_with_hough)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -309,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_size = 10\n",
+    "fig_size = 8\n",
     "marker_size = 60\n",
     "marker_color = \"yellow\"\n",
     "marker_type = \"*\"\n",
@@ -410,16 +399,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save obtained coordinates in csv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dump_coords_csv(\n",
-    "#     x=x_factual,\n",
-    "#     y=y_factual,\n",
-    "#     savepath=\"tmp.csv\"\n",
-    "# )"
+    "dump_coords_csv(\n",
+    "    x=x_factual,\n",
+    "    y=y_factual,\n",
+    "    savepath=f\"detections_plot{PLOT_NUMBER}_marker{MARKER_NUMBER}.csv\"\n",
+    ")"
    ]
   },
   {
