explicitly pass fig_size param

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -357,7 +357,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapper.interactive_widget()"
+    "fig_size = 6\n",
+    "\n",
+    "mapper.interactive_widget(fig_size=fig_size)"
    ]
   },
   {
