--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -150,14 +150,10 @@
     "plt.subplot(1, 2, 1)\n",
     "draw_image(image)\n",
     "plt.title(\"Source image\")\n",
-    "plt.xticks([])\n",
-    "plt.yticks([])\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
     "draw_image(template)\n",
-    "plt.title(\"Chosen marker\")\n",
-    "plt.xticks([])\n",
-    "plt.yticks([]);"
+    "plt.title(\"Chosen marker\")"
    ]
   },
   {
@@ -179,11 +175,9 @@
     "# fig = plt.figure()\n",
     "# plt.subplot(1, 2, 1)\n",
     "# draw_image(template_mask)\n",
-    "# plt.xticks([]); plt.yticks([])\n",
     "\n",
     "# plt.subplot(1, 2, 2)\n",
-    "# draw_image(additional_template_mask)\n",
-    "# plt.xticks([]); plt.yticks([]);"
+    "# draw_image(additional_template_mask)"
    ]
   },
   {
