create BBoxWidget from image bytes

--- a/examples/select_markers.ipynb
+++ b/examples/select_markers.ipynb
@@ -44,6 +44,7 @@
    "outputs": [],
    "source": [
     "source_image = read_image_rgb(PLOT_PATH)\n",
+    "img_bytes = cv.imencode('.png', source_image)[1].tobytes()\n",
     "\n",
     "# draw_image(source_image)"
    ]
@@ -55,7 +56,6 @@
    "outputs": [],
    "source": [
     "NUMBER_OF_MARKERS = 2\n",
-    "\n",
     "marker_titles = [f\"marker{i+1}\" for i in range(NUMBER_OF_MARKERS)]"
    ]
   },
@@ -66,9 +66,10 @@
    "outputs": [],
    "source": [
     "widget = BBoxWidget(\n",
-    "    image=str(PLOT_PATH),\n",
     "    classes=marker_titles,\n",
-    ")"
+    "    hide_buttons=True\n",
+    ")\n",
+    "widget.image_bytes = img_bytes"
    ]
   },
   {
