create pipeline for selecting markers on plot image

--- a/examples/select_markers.ipynb
+++ b/examples/select_markers.ipynb
@@ -6,15 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jupyter_bbox_widget import BBoxWidget\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import pathlib\n",
-    "import cv2 as cv\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "from scanplot.io import read_image_rgb\n",
-    "from scanplot.plotting import draw_image, draw_bbox\n",
-    "from scanplot.core.process_template import crop_image"
+    "from scanplot.io import read_image_rgb, save_markers\n",
+    "from scanplot.plotting import draw_image\n",
+    "from scanplot.core.process_template import extract_markers_from_image\n",
+    "from scanplot.view import MarkerSelectorBBoxWidget"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Load scatter plot image"
    ]
   },
   {
@@ -32,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PLOT_NUMBER = 37\n",
+    "PLOT_NUMBER = 8\n",
     "\n",
     "PLOT_PATH = DATA_PATH / \"plot_images\" / f\"plot{PLOT_NUMBER}.png\""
    ]
@@ -44,9 +50,15 @@
    "outputs": [],
    "source": [
     "source_image = read_image_rgb(PLOT_PATH)\n",
-    "img_bytes = cv.imencode('.png', source_image)[1].tobytes()\n",
     "\n",
-    "# draw_image(source_image)"
+    "draw_image(source_image)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Select markers on image\n"
    ]
   },
   {
@@ -55,62 +67,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NUMBER_OF_MARKERS = 2\n",
-    "marker_titles = [f\"marker{i+1}\" for i in range(NUMBER_OF_MARKERS)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "widget = BBoxWidget(\n",
-    "    classes=marker_titles,\n",
-    "    hide_buttons=True\n",
-    ")\n",
-    "widget.image_bytes = img_bytes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "widget"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "widget.bboxes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save marker images\n",
+    "# specify how many types of markers are on the scatter plot\n",
+    "markers_number = 3\n",
     "\n",
-    "for i, bbox in enumerate(widget.bboxes):\n",
-    "    x_min = bbox[\"x\"]\n",
-    "    x_max = bbox[\"x\"] + bbox[\"width\"]\n",
-    "    y_min = bbox[\"y\"]\n",
-    "    y_max = bbox[\"y\"] + bbox[\"height\"]\n",
-    "    label = bbox[\"label\"]\n",
-    "    \n",
-    "    marker_image = crop_image(source_image, bbox=(x_min, x_max, y_min, y_max))\n",
-    "    \n",
-    "    cv.imwrite(\n",
-    "        filename=str(DATA_PATH / \"marker_images\" / f\"plot{PLOT_NUMBER}_marker{i+1}.png\"), \n",
-    "        img=marker_image,\n",
-    "    )"
+    "# create widget\n",
+    "marker_selector = MarkerSelectorBBoxWidget(source_image, markers_number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Interactively draw bboxes for each marker type"
    ]
   },
   {
@@ -119,15 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for bbox in widget.bboxes:\n",
-    "    x_min = bbox[\"x\"]\n",
-    "    x_max = bbox[\"x\"] + bbox[\"width\"]\n",
-    "    y_min = bbox[\"y\"]\n",
-    "    y_max = bbox[\"y\"] + bbox[\"height\"]\n",
-    "\n",
-    "    marker_image = crop_image(source_image, bbox=(x_min, x_max, y_min, y_max))\n",
-    "    draw_image(marker_image)\n",
-    "    plt.show()"
+    "marker_selector"
    ]
   },
   {
@@ -136,14 +96,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# draw_image(source_image)\n",
+    "marker_selector.validate_bboxes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "marker_images, _ = extract_markers_from_image(\n",
+    "    source_image, marker_selector.bboxes\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## draw extracted markers\n",
     "\n",
-    "# for bbox in widget.bboxes:\n",
-    "#     x_min = bbox[\"x\"]\n",
-    "#     x_max = bbox[\"x\"] + bbox[\"width\"]\n",
-    "#     y_min = bbox[\"y\"]\n",
-    "#     y_max = bbox[\"y\"] + bbox[\"height\"]\n",
-    "#     draw_bbox(x_min, x_max, y_min, y_max)"
+    "# for marker in marker_images:\n",
+    "#     draw_image(marker)\n",
+    "#     plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Save extracted marker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "marker_images_savepath = DATA_PATH / \"marker_images\"\n",
+    "\n",
+    "save_markers(\n",
+    "    marker_images,\n",
+    "    save_directory=marker_images_savepath,\n",
+    "    filename_prefix=PLOT_PATH.stem\n",
+    ")"
    ]
   },
   {
