selecting ROI feature: initial version

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -55,9 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scanplot.io import read_image_rgb\n",
-    "from scanplot.io import dump_coords_csv\n",
-    "from scanplot.plotting import draw_image"
+    "from scanplot.io import read_image_rgb, dump_coords_csv\n",
+    "from scanplot.plotting import draw_image, draw_ROI"
    ]
   },
   {
@@ -71,7 +70,8 @@
     "from scanplot.core import normalize_map\n",
     "from scanplot.core import image_tresholding, reconstruct_template_mask\n",
     "from scanplot.core import generalized_hough_transform\n",
-    "from scanplot.core import CoordinatesConverter"
+    "from scanplot.core import CoordinatesConverter\n",
+    "from scanplot.core import bboxes_to_roi, apply_roi"
    ]
   },
   {
@@ -119,8 +119,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PLOT_NUMBER = 84\n",
-    "MARKER_NUMBER = 1\n",
+    "PLOT_NUMBER = 66\n",
+    "MARKER_NUMBER = 4\n",
     "\n",
     "PLOT_PATH = DATA_PATH / \"plot_images\" / f\"plot{PLOT_NUMBER}.png\"\n",
     "TEMPLATE_PATH = (\n",
@@ -154,6 +154,80 @@
     "plt.subplot(1, 2, 2)\n",
     "draw_image(template)\n",
     "plt.title(\"Chosen marker\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from jupyter_bbox_widget import BBoxWidget\n",
+    "import cv2 as cv\n",
+    "from matplotlib.patches import Rectangle\n",
+    "from matplotlib.patches import Patch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roi_widget = BBoxWidget(\n",
+    "    hide_buttons=True,\n",
+    "    classes=[\"Region of interest\"],\n",
+    "    image_bytes=cv.imencode(\".png\", source_image)[1].tobytes(),\n",
+    "    colors=[\"green\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roi_widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roi = bboxes_to_roi(source_image, roi_widget.bboxes)\n",
+    "\n",
+    "draw_image(source_image)\n",
+    "draw_ROI(roi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draw_image(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = apply_roi(image, roi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draw_image(image)"
    ]
   },
   {
@@ -292,8 +366,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_size = 8\n",
-    "marker_size = 80\n",
+    "fig_size = 12\n",
+    "marker_size = 50\n",
     "marker_color = \"yellow\"\n",
     "marker_type = \"*\"\n",
     "\n",
@@ -351,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_size = 6\n",
+    "fig_size = 10\n",
     "\n",
     "mapper.interactive_widget(fig_size=fig_size)"
    ]
